# IroSphere

./: .gitignore  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  switch.cpp  tsconfig.json  vite.config.ts
.github/workflows/: tauri-action.yml
docs/: index.html
docs/assets/: index-0635ea86.js  index-082e51f8.css  index-19d65b7f.css  index-3491fa76.js  index-46375935.js  index-4ccd5e0b.css  index-54ca6c2b.js  index-6178ba9d.js  index-6e8955e6.js  index-7330af63.js  index-7dec2209.js  index-a599fa4a.css  index-aceaca9d.js  index-bdfe06c2.css  index-e1d6d208.js  index-f6642c26.js
src/: 3dviewer.html  3dviewer.ts  counter.ts  hotKey.ts  img.ts  main.ts  meshLine.ts  style.css  style.scss  tauri_or_web.ts  tauri_or_web.ts.tmp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_open.rs  handler.rs  main.rs
src/chrome-extension/: event.ts  popup.html  popup.ts
