[package]
name = "IroSphere"
version = "0.0.2"
description = "A Tauri App"
authors = ["oligami"]
license = "MIT License"
repository = ""
default-run = "IroSphere"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
