[package]
name = "IroSphere"
version = "1.0.2"
description = "A Tauri App"
authors = ["oligami"]
license = "MIT License"
repository = ""
default-run = "IroSphere"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = ["dialog-open", "global-shortcut-all", "protocol-asset", "updater", "window-set-fullscreen"] }
serde = { version = "1.0", features = ["derive"] }
hotwatch = {version = "0.4.6"}
serde_json = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
